--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <script type="text/javascript">
       function myFunction() {
-        var pw = "Joines2020";
+        var pw = "Gatlin";
         var guess = "";
         attempt = 1;
         max = 4
