--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
         opacity: 1;
       }
     }
+    .modal-header .close {
+      margin: -1rem -1rem -1rem 1rem;
+    }
+    .card-img-top {
+      cursor: pointer;
+    }
+    .text-muted.modal-close-text:hover {
+      color: black !important;
+      cursor: pointer;
+    }
+    #selectedImg {
+      cursor: pointer;
+    }
+    .modal-img-scaling {
+      max-height: 70vh;
+    }
 
   </style>
 
@@ -50,16 +66,51 @@
       window.onload = myFunction();
     </script>
     <div class="container fade-in">
-      <h1 class="py-4">Gatlin Previews</h1>
+      <div class="row justify-content-between align-items-end">
+        <div class="col"><h1 class="py-4">Gatlin Previews</h1></div>
+        <div class="col text-right my-4">
+          <a href="images\full\Gatlin Joines Newborn.zip" class="btn btn-secondary btn-large ml-auto" target="_blank">Download All (Zip)</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-right mb-4">
+          <a href="docs\PhotoCopyrightRelease-JoinesNBorn2020.pdf" target="_blank">Copyright Release Letter</a>
+          <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+          <a href="docs\NBD_Invoice_001015.pdf" target="_blank">Invoice</a>
+        </div>
+      </div>
 
       <section id="gallery">
         <div class="card-columns">
 
         </div>
       </section>
+
+      <div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document" style="min-width: 80vw;">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="previewTitle"></h5>
+              <a class="modal-link ml-auto" id="modalDownloadLink" href="" target="_blank" download><button type="button" class="btn btn-success btn-large" data-toggle="popover" data-trigger="hover focus" data-placement="bottom" title="Downloading Instructions" data-content="If the download link opens your photo in a new window, right click the image from there and select 'Save Target As...' or 'Save As...' from the menu." name="download-button">Download this image</button></a>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body justify-content-center align-items-center text-center">
+              <img id="selectedImg" class="mh-75 mw-100 modal-img-scaling" onclick="this.classList.toggle('modal-img-scaling');" src="" alt="large view of selected image">
+              <br />
+              <!--<p data-dismiss="modal" class="text-muted modal-close-text">[ Close ]</p>-->
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <section class="footer bg-dark text-center py-4">
-      <h3 class="text-muted">Nick Burgher Photography | 2020</h3>
+      <h5><a class="text-muted" href="https://www.facebook.com/nickburgherphotography/" target="_blank">Nick Burgher Photography | 2020</a></h5>
     </section>
 
     <!-- Optional JavaScript -->
@@ -68,5 +119,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="scripts/index.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="popover"]').popover();
+      });
+    </script>
   </body>
 </html>
