--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
       window.onload = myFunction();
     </script>
     <div class="container fade-in">
-      <div class="row justify-content-between align-items-end">
-        <div class="col"><h1 class="py-4">Gatlin Previews</h1></div>
-        <div class="col text-right my-4">
+      <div class="row justify-content-between align-items-end my-4">
+        <div class="col">
+          <h1 class="pb-1">Joines Newborn</h1>
+          <small class="text-muted">January 2020</small>
+        </div>
+        <div class="col text-right">
           <a href="images\full\Gatlin Joines Newborn.zip" class="btn btn-secondary btn-large ml-auto" target="_blank">Download All (Zip)</a>
         </div>
       </div>
