--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container fade-in">
       <div class="row justify-content-between align-items-end my-4">
         <div class="col">
-          <h1 class="pb-1">Joines Newborn</h1>
+          <h1>Joines Newborn</h1>
           <small class="text-muted">January 2020</small>
         </div>
         <div class="col text-right">
